+ Added <mobile> option for skins. What it does right now is modify the post layout to show the userbox above the post, rather than next to it. Also, the userbox in mobile mode is simplified to: avatar, user name, user rank, post date, and action buttons. More importantly, the Quote and Modify buttons get moved to the Action menu to save some space. (Display.php, + Added support for 'like', 'unlike', 'quote' and 'modify' to the Action menu. (Display.php, index.language.php) + Added a new skin, Wireless (see the pattern in official Wedge skin names, eh?), which simply enables mobile mode and provides userbox styling, so that we don't have to style it in Weaving under a specificity of '.mobile'... Yeah, whatever. (skins/Wireless/*) ! In some rare situations, Wedge would not close the opening UL tag for action buttons. Not that it would break anything else than validation, though... (Display.template.php) ! Post classes would break in all situations (except for topic messages), because of a padding reset. I'm pretty sure I reset it for a reason, so it's likely that something else will break... If it does, well, I'll fix it again. Differently. (sections.css) - Replaced $txt['reply_quote'] with just $txt['quote']. We're adding so many new strings to the index language files, might as well remove anything that doesn't really serve a point... (PersonalMessage.template.php, Profile.template.php, index.language.php)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -217,7 +217,6 @@ img.new_posts
 	// Without this, wide code blocks will break layout.
 	table-layout: fixed
 	width: 100%
-	padding: 0
 
 .postbg2 extends ".windowbg2, .postbg"
 	background: #fbf9f6
@@ -461,7 +460,6 @@ ul.quickbuttons extends ul.reset
 		background-image: url($images/new_some.png)
 		background-position: 0 0
 		padding-left: 25px
-
 
 ul.usermenuitem, ul.acmenuitem
 	padding: 2px
